[gd_scene load_steps=2 format=2]

[ext_resource path="res://Node2D.gd" type="Script" id=1]

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="Button" type="Button" parent="."]
margin_left = 182.0
margin_top = 202.0
margin_right = 366.0
margin_bottom = 260.0
text = "GUARDAR VALORES ACIMA"

[node name="Label3" type="Label" parent="Button"]
margin_left = -17.0
margin_top = -142.0
margin_right = 198.0
margin_bottom = -77.0
text = "INSIRA NOME E NÚMERO
SEGUINDO O SEGUINTE PADRÃO:

NÚMERO/NOME"
align = 1

[node name="Button2" type="Button" parent="."]
margin_left = 464.0
margin_top = 202.0
margin_right = 619.0
margin_bottom = 260.0
text = "RENDERIZAR LISTA"

[node name="Button3" type="Button" parent="."]
margin_left = 735.0
margin_top = 202.0
margin_right = 947.0
margin_bottom = 260.0

[node name="Label4" type="Label" parent="Button3"]
margin_top = 5.0
margin_right = 212.0
margin_bottom = 58.0
text = "RENDERIZAR NOME 
(+ BALDO SE HOUVER ALGUM NUMERO IMPAR NA LISTA)"
align = 1
autowrap = true

[node name="LineEdit" type="LineEdit" parent="."]
margin_left = 197.0
margin_top = 130.0
margin_right = 352.0
margin_bottom = 188.0

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = 464.0
margin_top = 130.0
margin_right = 619.0
margin_bottom = 188.0
color = Color( 0.172549, 0.164706, 0.196078, 1 )

[node name="Label" type="Label" parent="ColorRect"]
margin_left = 2.0
margin_top = 2.0
margin_right = 153.0
margin_bottom = 56.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
autowrap = true

[node name="ColorRect2" type="ColorRect" parent="."]
margin_left = 735.0
margin_top = 130.0
margin_right = 947.0
margin_bottom = 188.0
color = Color( 0.172549, 0.164706, 0.196078, 1 )

[node name="Label2" type="Label" parent="ColorRect2"]
margin_left = 3.0
margin_top = 2.0
margin_right = 208.0
margin_bottom = 56.0
custom_colors/font_color = Color( 1, 1, 1, 1 )

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_Button3_pressed"]
